depends_compile_tests/tests/fail/derive/graph/bad_attr_spec.stderr
error: Vertex `comment` has no label
 --> tests/fail/derive/graph/bad_attr_spec.rs:8:17
  |
8 |         comment [class="Comments"];
  |                 ^^^^^^^^^^^^^^^^^^

error: Edge `comment -> comment_to_post` has no label
  --> tests/fail/derive/graph/bad_attr_spec.rs:20:36
   |
20 |         comment -> comment_to_post [class="TrackCommentPostIds"];
   |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
